# distributed_systems

./: .gitignore  Cargo.toml  README.md  config.json
key-value-server/: Cargo.toml  README.md  config.json
key-value-server/core/: Cargo.toml  README.md  build.rs  config.json
key-value-server/core/proto/: key-value-server.proto
key-value-server/core/src/: client_config.rs  config.rs  fastrand_random.rs  get_operation.rs  grpc_client.rs  key_value_server.rs  kv_client.rs  lib.rs  packet_loss_wrapper.rs  put_operation.rs  random.rs  server_runner.rs  storage.rs  storage_error.rs  timer.rs  tokio_timer.rs
key-value-server/scripts/: stress_test.ps1
key-value-server/server-flat-file/: Cargo.toml
key-value-server/server-flat-file/scripts/: run_test.ps1
key-value-server/server-flat-file/src/: flat_file_storage.rs  main.rs
key-value-server/server-in-memory/: Cargo.toml  README.md
key-value-server/server-in-memory/scripts/: run_test.ps1
key-value-server/server-in-memory/src/: in_memory_storage.rs  main.rs
key-value-server/server-sled-db/: Cargo.toml
key-value-server/server-sled-db/scripts/: run_test.ps1
key-value-server/server-sled-db/src/: main.rs  sled_db_storage.rs
map-reduce/: Cargo.toml  README.md  config.json
map-reduce/core/: Cargo.toml  README.md
map-reduce/core/src/: completion_signaling.rs  config.rs  default_phase_executor.rs  executor.rs  in_memory_state_store.rs  lib.rs  map_reduce_job.rs  map_reduce_problem.rs  mapper.rs  reducer.rs  (+18 more)
map-reduce/process-rpc/: .gitignore  Cargo.toml  README.md  build.rs  config.json
map-reduce/process-rpc/scripts/: run_proto_rpc.ps1
map-reduce/process-rpc/src/: config.rs  grpc_shutdown_signal.rs  grpc_state_server.rs  grpc_state_store.rs  grpc_status_sender.rs  grpc_work_receiver.rs  grpc_work_sender.rs  grpc_worker_runtime.rs  grpc_worker_synchonization.rs  grpc_worker_synchronization.rs  main.rs  mapper.rs  process_runtime.rs  reducer.rs  rpc.rs  rpc_completion_signaling.rs  rpc_state_access.rs  rpc_work_channel.rs  state_server.rs
map-reduce/proto-rpc-tonic/: Cargo.toml  README.md  config.json
map-reduce/proto-rpc-tonic/proto/: mapreduce.proto
map-reduce/proto-rpc-tonic/scripts/: run_proto_rpc.ps1
map-reduce/proto-rpc-tonic/src/: grpc_completion_signaling.rs  grpc_state_access.rs  grpc_work_channel.rs  main.rs  mapper.rs  process_runtime.rs  reducer.rs  rpc.rs
map-reduce/scripts/: stress_test.ps1
map-reduce/src/: config.rs  local_state_access.rs  main.rs  mapper.rs  orchestrator.rs  reducer.rs  shutdown_signal.rs  state_access.rs  tokio_runtime.rs  worker_runtime.rs
map-reduce/task-channels/: Cargo.toml  README.md  config.json
map-reduce/task-channels/src/: channel_completion_signaling.rs  channel_shutdown_signal.rs  channel_status_sender.rs  channel_work_receiver.rs  channel_work_sender.rs  channel_worker_runtime.rs  channel_worker_synchronization.rs  channel_wrappers.rs  config.rs  local_state_access.rs  main.rs  mapper.rs  mpsc_work_channel.rs  reducer.rs  task_work_distributor.rs  tokio_runtime.rs  types.rs
map-reduce/thread-socket/: Cargo.toml  README.md  config.json  config_test.json
map-reduce/word-search/: Cargo.toml  README.md
raft/: README.md
raft/core/: README.md
raft/docs/: DYNAMIC_MEMBERSHIP_IMPLEMENTATION_PLAN.md
raft/embassy-sim/: Cargo.toml
(+83 files in other folders)
