[workspace]
resolver = "2"
members = [
    "core",
    "server-in-memory",
    "server-flat-file",
    "server-sled-db",
]

[workspace.dependencies]
async-trait = "0.1.89"
fastrand = "2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
socket2 = "0.6.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
sled = "0.34.7"
bincode = "1.3.3"

