[package]
name = "key-value-server-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
fastrand = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
