[package]
name = "key-value-server-sled-db"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "key-value-server-sled-db"
path = "src/main.rs"

[dependencies]
key-value-server-core = { path = "../core" }

async-trait = { workspace = true }
tokio = { workspace = true }
sled = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
