[package]
name = "map-reduce-process-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
map-reduce-core = { path = "../core" }
map-reduce-word-search = { path = "../word-search" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
async-trait = { workspace = true }
rand = { workspace = true }
ctrlc = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
bytes = "1.11.0"
