[package]
name = "map-reduce-proto-rpc-tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
map-reduce-core = { path = "../core" }
map-reduce-word-search = { path = "../word-search" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
async-trait = { workspace = true }
rand = { workspace = true }

# gRPC dependencies
tonic = "0.12"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.12"
