[package]
name = "map-reduce-task-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
map-reduce-core = { path = "../core" }
map-reduce-word-search = { path = "../word-search" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
